Change class names; Comment unused code; Fix bugs & code style (from SpotBugs)